# The-Coterie-UserClustering

./: .dockerignore  .gitignore  Dockerfile  deployment.yaml  kmodes_clustering.py  preprocessing.py  pyproject.toml  redis-test.py  requirements.txt  user_embedding.py
.github/workflows/: docker-image.yml
API/: API.py  User_Model.py  run.py
Clusters/: GaussianClusters.py  clusters.py  constrained_kmeans.py  test.py  user_embedding.py
Models/: User_Model.py
