[tool.poetry]
name = "the-coterie-userclustering"
version = "0.1.0"
description = "User clustering and API for the recommendation engine + group formation for The Coterie Mobile Application"
authors = ["Sara-Hesham-Mohammed <142182302+Sara-Hesham-Mohammed@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "API"}]

[tool.poetry.dependencies]
python = ">=3.12"
pydantic = ">=2.11.3,<3.0.0"
fastapi = ">=0.115.12,<0.116.0"
scikit-learn = ">=1.6.1,<2.0.0"
numpy = ">=2.2.5,<3.0.0"
uvicorn = ">=0.29.0,<0.30.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "API.run:main"